--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,14 @@
 [[source]]
+
 url = "https://pypi.python.org/simple"
 verify_ssl = true
-name = "pypi"
 
-[dev-packages]
 
 [packages]
+
 Flask = "*"
-request = "*"
-gunicorn = "*"
 ChatterBot = "*"
+
+[requires]
+
+python_version = "3.6"
